# Leica-MP-Black-Chrome

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt
monitor/: __init__.py  __main__.py  cli.py  config.py
